# BristolTester

./: .gitignore  build.gradle  version.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SoundLib.cpp  limit.cpp  sound.cpp  spatial.cpp  tonal.cpp
app/src/main/cpp/include/: SoundLib.hpp  limit.hpp  sound.hpp  spatial.hpp  tonal.hpp
app/src/main/java/com/jaycee/bristoltester/: ActivityMain.java  ActivitySpatial.java  ActivityTonal.java  ActivityToneLimit.java  ClassMetrics.java  JNINativeInterface.java
app/src/main/res/layout/: activity_main.xml  activity_spatial.xml  activity_tonal.xml  activity_tone_limit.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
wifi_tools/: 2017-01-26_09:27:34.csv  readSocket  readSocket.nim
wifi_tools/nimcache/: readSocket.c  readSocket.json  stdlib_algorithm.c  stdlib_etcpriv.c  stdlib_hashes.c  stdlib_json.c  stdlib_lexbase.c  stdlib_macros.c  stdlib_math.c  stdlib_nativesockets.c  stdlib_net.c  stdlib_os.c  stdlib_ospaths.c  stdlib_parseutils.c  stdlib_posix.c  stdlib_sets.c  stdlib_streams.c  stdlib_strutils.c  stdlib_system.c  stdlib_tables.c  stdlib_times.c  stdlib_unicode.c
wifi_tools/old_scripts/: plotData.py  readAndPlotSocketData.py  readJSONStringFromPointer.py  readSocket  readSocket.nim  readSocketData.py
